--- a/styles/items.css
+++ b/styles/items.css
@@ -4,15 +4,19 @@ html, body {
 }
 
 body {
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: column;
 	flex-flow: column;
 }
 
 #toolbar {
+	-webkit-flex: 0 0 auto;
 	flex: 0 0 auto;
 }
 
 #list {
+	-webkit-flex: 1 1;
 	flex: 1 1;
 	-webkit-user-select: none;
 	user-select: none;
@@ -26,7 +30,9 @@ body {
 	padding: 4px 5px 4px 5px;
 	cursor: pointer;
 	border-bottom: 1px solid #ccc;
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
 }
 
@@ -80,6 +86,7 @@ html:not(.focused) .last-selected {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: 0.8rem;
+	-webkit-flex: 1 1 100%;
 	flex: 1 1 100%;
 	padding-left: 1rem;
 }
@@ -88,6 +95,7 @@ html:not(.focused) .last-selected {
 	color: #664666;
 	padding-top: 0.2rem;
 	font-size: 0.75rem;
+	-webkit-flex: 1 1 10px;
 	flex: 1 1 10px;
 	white-space: nowrap;
 	min-width: 10px;
@@ -96,8 +104,6 @@ html:not(.focused) .last-selected {
 }
 
 .item-pin {
-	break-before: always;
-	break-after: never;
 	width: 0.4rem;
 	height: 0.4rem;
 	margin-top: 0.46rem;
@@ -106,6 +112,7 @@ html:not(.focused) .last-selected {
 	border-radius: 0.4rem;
 	background: radial-gradient(circle at center, white 30%, #c6c6c6 30%);
 	border: 1px solid white;
+	-webkit-flex: 0 0 auto;
 	flex: 0 0 auto;
 }
 .pinned {
@@ -118,6 +125,7 @@ html:not(.focused) .last-selected {
 	color: #6d6d6d;
 	padding-top: 0.2rem;
 	font-size: 0.75rem;
+	-webkit-flex: 1 1 20px;
 	flex: 1 1 20px;
 	white-space: nowrap;
 	font-weight: normal;
@@ -133,16 +141,20 @@ html:not(.focused) .last-selected {
 
 @media all and (min-width: 37rem) {
 	.item {
+		-webkit-flex-wrap: nowrap;
 		flex-wrap: nowrap;
+		-webkit-justify-content: flex-end;
 		justify-content: flex-end;
 	}
 	.item-title {
+		-webkit-flex: 1 1 auto;
 		flex: 1 1 auto;
 		padding-right: 20px;
 		padding-left: 0;
 		font-size: 0.75rem;
 	}
 	.item-pin {
+		-webkit-order: -1;
 		order: -1;
 		margin-top: 0.3rem;
 	}
@@ -150,10 +162,12 @@ html:not(.focused) .last-selected {
 		padding: 0;
 	}
 	.item-author {
+		-webkit-flex: 0 1 12rem;
 		flex: 0 1 12rem;
 	}
 
 	.item-date {
+		-webkit-flex: 0 1 5rem;
 		flex: 0 1 5rem;
 		padding-right: 5px;
 	}
