--- a/styles/sources.css
+++ b/styles/sources.css
@@ -1,28 +1,38 @@
 body {
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: column;
 	flex-flow: column;
+	
 }
 
 #toolbar {
+	-webkit-flex: 0 0 auto;
 	flex: 0 0 auto;
 }
 
 #list {
+	-webkit-flex: 1 1;
 	flex: 1 1;
 	/*padding-top: 3px;*/
 	-webkit-user-select: none;
 	user-select: none;
 	overflow-x: hidden;
 	overflow-y: auto;
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: column;
 	flex-flow: column;
 }
 
 .source {
+	-webkit-flex: 0 0 auto;
 	flex: 0 0 auto;
+	-webkit-order: 2;
 	order: 2;
 	width: 100%;
 	padding: 3px 5px 3px 10px;
+	display: -webkit-flex;
 	display: flex;
 	font-family: sans-serif;
 	font-size: 0.9rem;
@@ -43,6 +53,7 @@ body {
 }
 
 .source-icon {
+	-webkit-flex: 0 0 16px;
 	flex: 0 0 16px;
 	height: 16px;
 }
@@ -51,6 +62,7 @@ body {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	-webkit-flex: 1 1;
 	flex: 1 1;
 	padding: 0 5px;
 	line-height: 16px;
@@ -58,6 +70,7 @@ body {
 }
 
 .source-counter {
+	-webkit-flex: 0 0 auto;
 	flex: 0 0 auto;
 	padding: 0 5px;
 	background: #e1e1e1;
@@ -69,6 +82,7 @@ body {
 
 #indicator {
 	display: none;
+	-webkit-flex: 0 0 25px;
 	flex: 0 0 25px;
 	line-height: 25px;
 	white-space: nowrap;
